Fixed spacing in ApiGen custom theme.
For methods, since the expand/collapse was changed from '#' to '+/-',
more padding was needed to the right of the method signature.

--- a/docs/themes/apigen/theme-phpcap/src/resources/style.css
+++ b/docs/themes/apigen/theme-phpcap/src/resources/style.css
@@ -431,7 +431,8 @@ td.attributes {
 
 .class .methods td.name > div, .class td.value > div {
 	position: relative;
-	padding-right: 1em;
+	padding-right: 3em;    /* PHPCap change, because expand/collpase changed
+	                          from '#' to '+/-', so more room is needed. */
 }
 
 .anchor {
